# rag-with-local-model

./: .gitignore  README.md  app.py  pyproject.toml
modules/: chat_module.py  loader_module.py  vectorstore_module.py
utils/: others.py
