[tool.poetry]
name = "rag-streamlit"
version = "0.1.0"
description = ""
authors = ["Bat-Erdene Sukh-Ochir <baburyx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.337"
chromadb = "^0.4.17"
streamlit = "^1.28.2"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
