[tool.poetry]
name = "rag-streamlit"
version = "0.1.0"
description = ""
authors = ["Bat-Erdene Sukh-Ochir <baburyx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.337"
chromadb = "^0.4.17"
streamlit = "^1.28.2"
watchdog = "^3.0.0"
gpt4all = "^2.0.2"
pdfminer-six = "^20221105"
bs4 = "^0.0.1"
tiktoken = "^0.5.1"
sentence-transformers = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
